--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -43,7 +43,7 @@ jobs:
         scriptLocation: 'inlineScript'
         workingDirectory: '$(System.ArtifactsDirectory)'
         inlineScript: |
-          npm i -g --verbose @vscode/vsce
+          npm ci
           $basePublishArgs = , "publish"
           $basePublishArgs += '--azure-credential'
           $basePublishArgs += '--packagePath'
@@ -54,9 +54,9 @@ jobs:
           $publishArgs += 'vscode-dotnet-runtime-$(GetVersion.version).signature.p7s'
           If ("${{ parameters.SignType }}" -ne "Real") {
             Write-Host "With a test-signed build, the command to publish is printed instead of run."
-            Write-Host "##[command]vsce $publishArgs"
+            Write-Host "##[command]npx vsce $publishArgs"
           }
           Else {
-            Write-Host "##[command]vsce $publishArgs"
-            vsce @publishArgs
+            Write-Host "##[command]npx vsce $publishArgs"
+            npx vsce @publishArgs
           }
