--- a/release.yml
+++ b/release.yml
@@ -51,8 +51,8 @@ extends:
           runOnce:
             deploy:
               steps:
-              - template: pipelines-templates/install-node.yaml
-              - template: list-file-structure.yaml
+              - template: pipeline-templates/install-node.yaml@self
+              - template: pipeline-templates/list-file-structure.yaml@self
               - bash: |
                   VERSION=`node -p "require('./package.json').version"`
                   npm version $VERSION --allow-same-version
