consume SBOM artifact

--- a/release.yml
+++ b/release.yml
@@ -20,6 +20,9 @@ resources:
   - pipeline: officialBuildCI
     source: dotnet-vscode-dotnet-runtime
     branch: main
+  - pipeline: officialBuildCI
+    source: SBOM
+    branch: main
 extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
