--- a/release.yml
+++ b/release.yml
@@ -20,9 +20,6 @@ resources:
   - pipeline: officialBuildCI
     source: dotnet-vscode-dotnet-runtime
     branch: main
-  - pipeline: officialBuildCI
-    source: SBOM
-    branch: main
 extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
@@ -49,6 +46,10 @@ extends:
           - input: pipelineArtifact
             pipeline: officialBuildCI
             artifactName: vscode-dotnet-runtime-extension
+            destinationPath: $(Pipeline.Workspace)
+          - input: pipelineArtifact
+            pipeline: officialBuildCI
+            artifactName: SBOM
             destinationPath: $(Pipeline.Workspace)
         strategy:
           runOnce:
