--- a/release.yml
+++ b/release.yml
@@ -50,7 +50,7 @@ extends:
           - input: pipelineArtifact
             pipeline: officialBuildCI
             artifactName: SBOM
-            destinationPath: $(Pipeline.Workspace)
+            destinationPath: $(Pipeline.Workspace)/_manifest
         strategy:
           runOnce:
             deploy:
