--- a/release.yml
+++ b/release.yml
@@ -24,7 +24,7 @@ extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
     pool:
-      name: netcore1espool-internal
+      name: NetCore1ESPool-Internal
       image: 1es-windows-2022
       os: windows
     customBuildTags:
@@ -36,9 +36,9 @@ extends:
         displayName: PublishToMarketplace
         environment: vscode-dotnetcore-extension-releases
         pool:
-          name: netcore1espool-internal
+          name: NetCore1ESPool-Internal
           image: 1es-windows-2022
-          os: linux
+          os: windows
         templateContext:
           type: releaseJob
           isProduction: true
