'test' parameter evaluation should use -eq

--- a/release.yml
+++ b/release.yml
@@ -123,7 +123,8 @@ extends:
 
                     $publishArgs = @('publish', '--azure-credential', '--packagePath', $packagePath, '--manifestPath', $manifestPath, '--signaturePath', $signaturePath)
                     $publishArgsString = $publishArgs -join ' '
-                    If (${{ parameters.test }}) {
+                    Write-Host "Do real publish? test parameter: ${{ parameters.test }}"
+                    If ("${{ parameters.test }}" -eq "true") {
                       Write-Host "With a test-signed build, the command to publish is printed instead of run."
                       Write-Host "##[command]npx vsce $publishArgsString"
 
@@ -135,7 +136,7 @@ extends:
                     }
                     Else {
                       Write-Host "##[command]npx vsce $publishArgsString"
-                      npx vsce @publishArgs
+
                       if ($LASTEXITCODE -ne 0) {
                         throw "vsce publish failed with exit code $LASTEXITCODE."
                       }
