--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -32,6 +32,7 @@
 		"glob": "^7.2.0"
 	},
 	"dependencies": {
+		"@dotnet/vscode-dotnet-runtime-types": "file:../vscode-dotnet-runtime-types",
 		"@types/chai-as-promised": "^7.1.4",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^20.0.0",
