--- a/vscode-dotnet-runtime-library/tsconfig.json
+++ b/vscode-dotnet-runtime-library/tsconfig.json
@@ -6,6 +6,10 @@
 		"lib": [
 			"es6"
 		],
+		"types": [
+			"node",
+			"mocha"
+		],
 		"skipLibCheck": true,
         "sourceMap": true,
         "declaration": true,
